Added password encryption and validator

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb+srv://sks372000:board123@cluster0.vs5zj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://sohampal:2weak2slow@cluster0.vn24o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=3000
