--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.10.0",
-    "socket.io": "^4.8.1"
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1",
+    "validator": "^13.15.15"
   },
   "scripts": {
     "start": "node server.js"
