started with canvas model

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://sohampal:2weak2slow@cluster0.vn24o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-PORT=3000
+PORT=3030
+SECRET_KEY=Qx2V!z7a@L$4dP#Wm9^Nc3Yj&Tk5Rb8U
